--- a/index.html
+++ b/index.html
@@ -2,44 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Chatbot</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 50px;
-      background-color: #f5f5f5;
-    }
-    h2 {
-      color: #1e90ff;
-    }
-    .chatbot-container {
-      width: 400px;
-      height: 500px;
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      overflow: hidden;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-    }
-    iframe {
-      width: 100%;
-      height: 100%;
-      border: none;
-    }
-  </style>
+  <title>Dialogflow Test</title>
 </head>
 <body>
-
-<h2>Chat with Our Bot</h2>
-
-<div class="chatbot-container">
-  <!-- Embed your Dialogflow Web Demo iframe here -->
- 
-<iframe height="430" width="350" src="https://bot.dialogflow.com/722b0dca-c219-418a-8db5-b4d6a43cd46b"></iframe>
-</div>
-
+  <iframe height="430" width="350" src="https://bot.dialogflow.com/722b0dca-c219-418a-8db5-b4d6a43cd46b"></iframe>
 </body>
 </html>
-
